# ImageCarver

./: .gitignore  CMakeLists.txt  CRV.slnx  README.md  setup_OSX_XCODE_env.sh  setup_OSX_env.sh  setup_win32_env.bat
Page/: Page.vcxproj  Page.vcxproj.filters  main.cpp  test.crv
app/: CMakeLists.txt  main.cpp
app/core/graphics/formats/: crv_bitmap.cpp  crv_bitmap.h  crv_commonimage.cpp  crv_commonimage.h
app/core/graphics/objects/: crv_commonfigureobject.cpp  crv_commonfigureobject.h  crv_commonlineobject.cpp  crv_lineobject.cpp  crv_lineobject.h  crv_object.cpp  crv_object.h  crv_ovalobject.cpp  crv_ovalobject.h  crv_rectangleobject.cpp  crv_rectangleobject.h
app/core/graphics/render/: crv_brush.cpp  crv_brush.h  crv_canvas.cpp  crv_canvas.h  crv_canvas.inl  crv_painttool.cpp  crv_painttool.h  crv_pen.cpp  crv_pen.h
app/core/logic/: crv_project.cpp  crv_project.h  crv_project.inl  crv_projectload.cpp  crv_projectload.h  crv_projectsave.cpp  crv_projectsave.h
app/utils/: bitmap.cpp  bitmap.h  crv_helper.cpp  result.h  type.cpp  type.h
app/utils/helpers/: generateuuid.cpp  generateuuid.h  time.h
app/utils/types/: crv_color.cpp  crv_color.h  crv_xmlcommon.h  crv_xmlcommon.inl
core/graphics/formats/: crv_bitmap.cpp  crv_commonimage.cpp  crv_commonimage.h
core/graphics/objects/: crv_commonfigureobject.cpp  crv_commonlineobject.h  crv_lineobject.cpp  crv_object.cpp  crv_object.h  crv_ovalobject.cpp  crv_rectangleobject.cpp
core/graphics/render/: crv_brush.cpp  crv_brush.h  crv_canvas.cpp  crv_canvas.h  crv_painttool.cpp  crv_painttool.h
core/logic/: crv_project.cpp  crv_project.h  crv_project.inl  crv_projectload.cpp  crv_projectload.h  crv_projectsave.cpp  crv_projectsave.h
utilities/: crv_helper.h  type.cpp
utilities/types/: bytes.h  crv_color.cpp  crv_xmlcommon.h
